@@ -4,6 +4,7 @@ Revision history for Perl module HTTP::Client
 
     - Moved testsuite (such as it is) into t/,
       and refactored to use Test::More
+    - use LWP::Online to only run online tests if online
     - Min perl version 5.6.0 (was set to 5.8)
     - Added min perl version to metadata
     - Added strict and warnings to PREREQ_PM
